--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
-    <title>The Science of Nutritional Immunology</title>
+    <title>Better QA Automation</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but e-excel nutritonal immunology doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but better qa automation doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
